# pessimistic-proof

./: .gitignore  README.md
invariant_proof/: Cargo.toml
invariant_proof/src/: keccak.rs  lib.rs  local_exit_tree.rs  proof.rs  test_utils.rs  utils.rs  withdrawal.rs
invariant_proof/src/hasher/: keccak.rs  mod.rs
invariant_proof/src/local_exit_tree/: deposit.rs  mod.rs  tests.rs  withdrawal.rs
invariant_proof/src/local_exit_tree/hasher/: keccak.rs  mod.rs
invariant_proof/tests/: local_exit_root.rs
invariant_proof/tests/data/: batch_data.txt
pessimistic_proof/: Cargo.toml
pessimistic_proof/src/: batch.rs  certificate.rs  global_state.rs  lib.rs  proof.rs
pessimistic_proof/src/local_exit_tree/: hasher.rs
pessimistic_proof/tests/: final_proof.rs  full_proof.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
