[package]
name = "poly_invariant_proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
    "keccak",
] }

[dev-dependencies]
rs_merkle = { version = "1.4", default-features = false }
