[package]
name = "poly-invariant-proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.4", features = ["serde"] }
reth-primitives = { git = "https://github.com/sp1-patches/reth", default-features = false, branch = "sp1-reth" }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
    "keccak",
] }

[dev-dependencies]
base64 = "0.22"
hex = "0.4.3"
rs_merkle = { version = "1.4", default-features = false }
