[workspace]
[package]
version = "0.1.0"
name = "pessimistic-proof-program"
edition = "2021"

[dependencies]
poly-pessimistic-proof = { path = "../pessimistic_proof" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v1.0.2-testnet" }
sp1-derive = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.2-testnet" }
