[workspace]
[package]
version = "0.1.0"
name = "invariant-proof-script"
edition = "2021"

[dependencies]
hex = "0.4.3"
poly-invariant-proof = { path = "../invariant_proof" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
